--- a/alogrytmy.html
+++ b/alogrytmy.html
@@ -32,7 +32,54 @@
 	}
 
 </script>
-	
+<style>	
+body
+{
+	padding-left:100px;
+	padding-right: 100px;
+	font-family: arial;
+	background-color: blanchedalmond;
+}
+
+#tekst
+{
+	text-align: justify;
+	font-size: 25px;
+}
+
+input
+{
+    background-color: deepskyblue;
+    border-radius: 40px;
+    font-size: 20px;
+    font-family:monospace;
+    padding: 5px 32px;
+    display: inline-block;
+    border: 5px solid mediumblue;    
+}
+
+code
+{
+	font-size: 15px;
+}
+
+h2
+{
+	background: teal;
+	text-align: center;
+	color: white;
+}
+
+h1
+{
+	color: red;
+}
+
+#wynik
+{
+	font-size: 25px;
+}
+	</style>	
 </head>
 
 <body>
