--- a/alogrytmy.html
+++ b/alogrytmy.html
@@ -101,29 +101,29 @@ h1
 <h2>Kod cpp</h2>
 
 <pre style="width:100%;padding:0px" id="codeblock"><code style="width:100%"><span style="color: limegreen; font-weight: bold">#include &lt;iostream&gt;</span>
-<span style="color: darkblue; font-weight: bold">using namespace</span> <span style="color: limegreen; font-weight: bold">std</span><span style="color: red; font-weight: bold">;</span>
+<span style="color: blue; font-weight: bold">using namespace</span> <span style="color: limegreen; font-weight: bold">std</span><span style="color: red; font-weight: bold">;</span>
 
-<span style="color: darkblue; font-weight: bold">int</span> main<span style="color: red; font-weight: bold">()</span>
+<span style="color: blue; font-weight: bold">int</span> main<span style="color: red; font-weight: bold">()</span>
 &lcub;
-    <span style="color: darkblue; font-weight: bold">int</span> a,b<span style="color: red; font-weight: bold">;</span>
-    <span style="color: limegreen; font-weight: bold">cin</span> <span style="color: red; font-weight: bold">&gt;&gt;</span> a <span style="color: red; font-weight: bold">&gt;&gt;</span> b<span style="color: red; font-weight: bold">;</span>
+    <span style="color: blue; font-weight: bold">int</span> a,b<span style="color: red; font-weight: bold">;</span>
+    <span style="color: green; font-weight: bold">cin</span> <span style="color: red; font-weight: bold">&gt;&gt;</span> a <span style="color: red; font-weight: bold">&gt;&gt;</span> b<span style="color: red; font-weight: bold">;</span>
 
-    <span style="color: darkblue; font-weight: bold">while</span><span style="color: red; font-weight: bold">(</span>a <span style="color: red; font-weight: bold">!=</span> b<span style="color: red; font-weight: bold">)</span>
-        <span style="color: darkblue; font-weight: bold">if</span><span style="color: red; font-weight: bold">(</span>a <span style="color: red; font-weight: bold">&gt;</span> b<span style="color: red; font-weight: bold">)</span> a <span style="color: red; font-weight: bold">-=</span> b<span style="color: red; font-weight: bold">;</span>
-        <span style="color: darkblue; font-weight: bold">else</span>      b <span style="color: red; font-weight: bold">-=</span> a<span style="color: red; font-weight: bold">;</span>
+    <span style="color: blue; font-weight: bold">while</span><span style="color: red; font-weight: bold">(</span>a <span style="color: red; font-weight: bold">!=</span> b<span style="color: red; font-weight: bold">)</span>
+        <span style="color: blue; font-weight: bold">if</span><span style="color: red; font-weight: bold">(</span>a <span style="color: red; font-weight: bold">&gt;</span> b<span style="color: red; font-weight: bold">)</span> a <span style="color: red; font-weight: bold">-=</span> b<span style="color: red; font-weight: bold">;</span>
+        <span style="color: blue; font-weight: bold">else</span>      b <span style="color: red; font-weight: bold">-=</span> a<span style="color: red; font-weight: bold">;</span>
 
-    <span style="color: limegreen; font-weight: bold">cout</span> <span style="color: red; font-weight: bold">&lt;&lt;</span> a <span style="color: red; font-weight: bold">&lt;&lt;</span> <span style="color: limegreen; font-weight: bold">endl</span><span style="color: red; font-weight: bold">;</span>
+    <span style="color: green; font-weight: bold">cout</span> <span style="color: red; font-weight: bold">&lt;&lt;</span> a <span style="color: red; font-weight: bold">&lt;&lt;</span> <span style="color: limegreen; font-weight: bold">endl</span><span style="color: red; font-weight: bold">;</span>
 
-    <span style="color: darkblue; font-weight: bold">return</span> <span style="color: magenta; font-weight: bold">0</span><span style="color: red; font-weight: bold">;</span>
+    <span style="color: blue; font-weight: bold">return</span> <span style="color: magenta; font-weight: bold">0</span><span style="color: red; font-weight: bold">;</span>
 &rcub;
 </code></pre>
 <br>
 <h2>Kod python</h2>
-<pre style="width:100%;padding:0px" id="codeblock"><code style="width:100%"><span style="color: darkorange; font-weight: bold">def</span> <span style="color: darkblue; font-weight: bold">NWD</span>(a,b):
-    <span style="color: darkorange; font-weight: bold">while</span> a != b:
-        <span style="color: darkorange; font-weight: bold">if</span> a&gt;b: a -= b
-        <span style="color: darkorange; font-weight: bold">else</span>: b -= a
-    <span style="color: darkorange; font-weight: bold">return</span> a
+<pre style="width:100%;padding:0px" id="codeblock"><code style="width:100%"><span style="color: orange; font-weight: bold">def</span> <span style="color: darkblue; font-weight: bold">NWD</span>(a,b):
+    <span style="color: orange; font-weight: bold">while</span> a != b:
+        <span style="color: orange; font-weight: bold">if</span> a&gt;b: a -= b
+        <span style="color: orange; font-weight: bold">else</span>: b -= a
+    <span style="color: orange; font-weight: bold">return</span> a
  
 a = <span style="color: mediumorchid; font-weight: bold">int</span>(<span style="color: mediumorchid; font-weight: bold">input</span>())
 b = <span style="color: mediumorchid; font-weight: bold">int</span>(<span style="color: mediumorchid; font-weight: bold">input</span>())
@@ -140,8 +140,8 @@ b = <span style="color: mediumorchid; font-weight: bold">int</span>(<span style=
 		
 		<span style="color: darkblue; font-weight: bold">while</span>(a != b)
 		&lcub;
-			<span style="color: darkblue; font-weight: bold">if</span>(a &lt; b) b = b - a;
-			<span style="color: darkblue; font-weight: bold">else</span> a = a - b;
+			<span style="color: blue; font-weight: bold">if</span>(a &lt; b) b = b - a;
+			<span style="color: blue; font-weight: bold">else</span> a = a - b;
 		&rcub;
 		
 		t = a
